@@ -1,6 +1,9 @@
 New in spot 2.8.4.dev (not yet released)
 
-  Nothing yet.
+  Bugs fixed:
+
+  - ltl2tgba -B could return automata with "t" acceptance, instead
+    of the expected Inf(0).
 
 New in spot 2.8.4 (2019-12-08)
 
